New: Add endpoint to retire a study
Add endpoint to retire a study. Under development. Possible way to limit growth of workflow table

Dependency: None
